<resources>
    <string name="app_name">曉曉2</string>
    <string name="sent_hello_world">Sent \'hello world\' to backend</string>

    <string name="sent">Sent</string>
    <string name="initial">initial</string>

    <string name="start_recording">start recording</string>
    <string name="recording">recording</string>
    <string name="stopped">stopped</string>

    <string name="recognized">Recognized:%1$s </string>
    <string name="local_asr_result">Local ASR Result:%1$s </string>
    <string name="cloud_asr_result">Cloud ASR Result:%1$s </string>
    <string name="asr_result">ASR Result:%1$s</string>

    <string name="type_anything">type anything</string>


    <string name="reset">reset</string>
    <string name="input">Input</string>
    <string name="robot">Robot</string>
    <string name="camera_on">camera on</string>
    <string name="error_occurred_while_creating_the_file">Error occurred while creating the File</string>
    <string name="capture_image">capture image\n</string>
    <string name="back_to_main">Back</string>
    <string name="error_occurred">error occurred</string>
    <string name="received">received\n</string>
    <string name="send">Send</string>
    <string name="voice_chat">Voice Chat</string>
    <string name="text_chat">Text Chat</string>
    <string name="send_image">Send Image</string>
    <string name="text_input">Text Input</string>
    <string name="hint">hint</string>
    <string name="kebbitwo">歡迎使用KebbiThree</string>
    <string name="select_image">select image</string>
    <string name="received_messages_will_appear_here">Received messages will appear here</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary">Diary</string>
    <string name="reminder">Reminder</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="chat">Chat</string>
    <string name="function">Function</string>
    <string name="audio_chat">Audio Chat</string>
    <string name="real_time_voice_chat">Real Time Voice Chat</string>
    <string name="camerax">CameraX</string>
    <string name="camera_off">camera_off</string>
    <string name="instant_image">instant image</string>
    <string name="camera">camera</string>
    <string name="robot_control">robot_control</string>

    <string name="voice_recognition">voice_recognition</string>
    <string name="start_voice_recognition">Start Voice Recognition</string>
    <string name="stop_voice_recognition">stop_voice_recognition</string>

    <string name="control_action">Control Action</string>
    <string name="speak">Speak</string>
    <string name="enter_ip_address">Enter IP Address</string>

    <!--Robot Motion Status -->
    <string name="thinking">thinking</string>
    <string name="waiting">Waiting for user input…</string>
    <string name="listening">Start Listening</string>
    <string name="speaking">Speaking</string>
    <string name="error">error\n</string>
    <string name="test_motion">Test Motion</string>
    <string name="test_expression">Test Expression</string>

    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="robot_control_test">Robot Control Test</string>
    <string name="connect_socket">Connect Socket</string>

    <string name="movement_go">movement go</string>
    <string name="movement_stop">movement stop</string>
    <string name="turn_seconds">turn seconds</string>
    <string name="turn">turn</string>
    <string name="forward_backward_seconds">forward backward seconds</string>
    <string name="movement_text_wheel">movement text wheel</string>
    <string name="detect_drop">detect_drop</string>
    <string name="forward_backward">forward_backward</string>
    <string name="movement_text_wheel_locked">Wheel is locked</string>
    <string name="movement_text_wheel_unlocked">Wheel is unlocked</string>
    <string name="show_saved_motions">Show Saved Motions</string>
    <string name="xiao_test">xiao</string>
    <string name="xiao">Xiao</string>
    <string name="asr_mixed">ASR Mixed</string>
    <string name="settings">Settings</string>
    <string name="this_is_xiao_fragment">This is Xiao Fragment</string>
    <string name="this_is_robot_control_fragment">This is Robot Control Fragment</string>
    <string name="this_is_asr_mixed_fragment">This is ASR Mixed Fragment</string>
    <string name="result_will_be_displayed_here">Result will be displayed here</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="setting">Setting</string>
    <string name="連線">連線</string>
    <string name="waiting_result">waiting_result</string>
    <string name="intevriew">訪談</string>
    <string name="interview">訪談</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>